# Pythonic

./: README.md
poetry/NamespacePackages/: README.md  pyproject.toml
poetry/NamespacePackages/goodbye/: README.md  pyproject.toml
poetry/NamespacePackages/goodbye/myns/goodbye/: example.py
poetry/NamespacePackages/hello/: README.md  pyproject.toml
poetry/NamespacePackages/test_app/: main.py  pyproject.toml
