[tool.poetry]
name = "myns-hello"
version = "0.1.0"
description = ""
authors = ["Michael Ikemann <[omitted]>"]
readme = "README.md"
packages = [
    { include = "myns/hello", from = "." }
]
[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
